@@ -5,10 +5,10 @@ import pl.setlikd.movieclub.domain.movie.dto.MovieDto;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class MovieService {
+
     private final MovieRepository movieRepository;
 
     public MovieService(MovieRepository movieRepository) {
@@ -18,10 +18,16 @@ public class MovieService {
     public List<MovieDto> findAllPromotedMovies() {
         return movieRepository.findAllByPromotedIsTrue().stream()
                 .map(MovieDtoMapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<MovieDto> findMovieById(long id) {
         return movieRepository.findById(id).map(MovieDtoMapper::map);
+    }
+
+    public List<MovieDto> findMoviesByGenreName(String genre) {
+        return movieRepository.findAllByGenre_NameIgnoreCase(genre).stream()
+                .map(MovieDtoMapper::map)
+                .toList();
     }
 }
